--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body
 {
-	background-color: #50859e;
+	background-color: #FFFFFF;
 	font-family: 'Roboto', sans-serif;
 	font-size: 14px;
-	color: white;
+	color: #50859E;
 	margin: 0;
 }
 h1
@@ -14,7 +14,7 @@ h1
  /*RYAN CODE*/
 	font-weight: bold;
  /*RYAN CODE*/
-	color: white; /*RYAN CODE*/
+	color: #50859E; /*RYAN CODE*/
 	margin-top: 10px;
 	margin-bottom: 20px;
 }
@@ -23,7 +23,7 @@ h2
 	font-family: Verdana, "Segoe UI" , Arial, "Helvetica CY" , "Nimbus Sans L" , Helvetica, sans-serif;
 	font-weight: bold;
 	font-size: 18px;
-	color: white;
+	color: #50859E;
 	margin-top: 8px;
 	margin-bottom: 8px;
 }
@@ -37,7 +37,7 @@ h3
 }
 a
 {
-	color: #AAEB86;
+	color: #50859E;
 	text-decoration: none;
 	transition: 0.2s;
 }
@@ -78,7 +78,7 @@ select
 	padding: 8px 10px 0px 25px;
 }
 .second-border {
-	border-bottom: solid white 5px;
+	border-bottom: solid #50859E 5px;
 }
 .third-border {
 	border-bottom: solid #980700 5px;
@@ -131,12 +131,12 @@ select
 {
 	font-size: 16px; /*RYAN CODE*/
 	letter-spacing:1.1px; /*RYAN CODE*/
-	color: white; /*RYAN CODE*/
+	color: #50859E; /*RYAN CODE*/
 	font-weight:400; /*RYAN code*/
 }
 #NavigationSection ul li:hover, #NavigationSection ul li.active, #NavigationSection ul li a:hover
 {
-	border-color: white; /*RYAN CODE - Border underline of header*/
+	border-color: #50859E; /*RYAN CODE - Border underline of header*/
 	text-decoration: none;
 }
 #ContentSection
@@ -151,7 +151,7 @@ select
 .TileContainer a
 {
 	font-weight: normal;
-	color: white; /*RYAN CODE*/
+	color: #50859E; /*RYAN CODE*/
 	transition: 0.2s; /*RYAN CODE*/
 }
 .TileContainer a:hover
@@ -224,22 +224,12 @@ select
 {
 	color: Red;
 }
-.erg-logo { /*RYAN CODE*/
-	background: url("https://img1.wsimg.com/isteam/ip/3191ce5d-c7a3-4cb3-894d-406cf0e13844/Eagle%20Raven%20Global%20Logo%20FINAL%20Full%20Color-12-0001.png/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1300,h:800");
-	background-repeat: no-repeat;
-	background-size: 400px;
-	width: 400px;
-	height: 100px;
-}
 
 .top-head {
 	/*#354954*/
-	background-color: #161616;
+	background-color: #FFFFFF;
 }
 
-#HeaderSectionPadding {
-	background-color: #161616;
-}
 
 /* Tablet and Smartphone Specific */
 @media only screen and (max-device-width: 768px)
