--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ input
 select
 {
 	color: white;
-	background-color: #354954;
+	background-color: #FFFFFF;
 	font-size: 15px;
 	border: none;
 	transition: 0.2s;
