--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,8 @@ select
 }
 .LargeButton /*these are the main buttons on the form*/
 {
-	
+	font-family: 'Roboto', sans-serif;
+	font-weight: normal;
 	background-color:#50859e; /*RYAN CODE*/
 	color: white; /*RYAN CODE*/
 	font-size: 16px;
@@ -205,6 +206,8 @@ select
 	cursor: pointer;
 }
 .LargeButton:hover {
+	font-family: 'Roboto', sans-serif;
+	font-weight: normal;
 	background-color: white;
 	color: #50859e;
 	box-shadow: 0 0 0;
