--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,7 @@ select
 .TileContainerContentTitle
 {
 	font-size: 1.6em;
+	margin-top: 20px;
 }
 .LargeButton /*these are the main buttons on the form*/
 {
